# ansible-stubs

./: README.md  pyproject.toml
ansible-stubs/module_utils/: basic.pyi
