[tool.poetry]
name = "ansible-stubs"
version = "0.1.dev2"
description = "Type stubs for the ansible package."
authors = ["Josef Friedrich <josef@friedrich.rocks>"]
readme = "README.rst"
repository = "https://github.com/pycontribs/ansible-stubs"
license = "MIT"
packages = [
    {include = "ansible-stubs"}
]

classifiers = [
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.8"
